annimate_core/tests/snapshots/corpora__initial.snap
---
source: annimate_core/tests/corpora.rs
---

metadata-version = 1

[corpus-sets."Test set"]
corpus-names = ["subtok.demo"]

