annimate_core/tests/snapshots/corpora__toggle1.snap
---
source: annimate_core/tests/corpora.rs
---
metadata-version = 1

[corpus-sets."Test set"]
corpus-names = []

