annimate_core/tests/snapshots/corpora__toggle2.snap
---
source: annimate_core/tests/corpora.rs
---
metadata-version = 1

[corpus-sets."Test set"]
corpus-names = ["subtok.demo2"]

